[gd_scene load_steps=23 format=2]

[ext_resource path="res://Battle/Arenas/Assets/Lungs/background mask 2.png" type="Texture" id=1]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/walls 0.png" type="Texture" id=2]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/silhoutte.png" type="Texture" id=3]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/BG 2.png" type="Texture" id=4]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/walls 2.png" type="Texture" id=5]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/background mask 0.png" type="Texture" id=6]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/background mask 1.png" type="Texture" id=7]
[ext_resource path="res://Battle/Arenas/Arena.tscn" type="PackedScene" id=8]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/walls 1.png" type="Texture" id=9]
[ext_resource path="res://Battle/Arenas/Lungs.gd" type="Script" id=10]
[ext_resource path="res://Battle/Arenas/Emmitters.gd" type="Script" id=11]
[ext_resource path="res://Battle/Arenas/Signs.gd" type="Script" id=12]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/CO2.png" type="Texture" id=13]
[ext_resource path="res://Battle/Arenas/Assets/Lungs/O2.png" type="Texture" id=14]
[ext_resource path="res://Shaders/Arrow.gdshader" type="Shader" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ) ],
"loop": false,
"name": "in",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "out",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": false,
"name": "in",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ) ],
"loop": false,
"name": "out",
"speed": 1.0
} ]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 40.0
scale = 4.0
color = Color( 1, 1, 1, 0.352941 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 40.0
scale = 4.0
color = Color( 1, 1, 1, 0.352941 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 15 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 15 )

[node name="Lungs" instance=ExtResource( 8 )]
script = ExtResource( 10 )
strength = 0.2

[node name="Scroll" parent="BG" index="0"]
visible = true

[node name="BG" parent="Organ" index="0"]
tile_data = PoolIntArray( -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 524293, 0, 0 )

[node name="BGMap" parent="Organ/BG" index="0"]
frames = SubResource( 1 )
animation = "out"

[node name="Silloutte" parent="Organ" index="1"]
frames = SubResource( 2 )

[node name="Contour" parent="Organ" index="2"]
frames = SubResource( 3 )
background = ExtResource( 4 )

[node name="LeftCollision" type="StaticBody2D" parent="Organ" index="4"]

[node name="Strong1" type="CollisionPolygon2D" parent="Organ/LeftCollision" index="0"]
polygon = PoolVector2Array( -370, 244, -348, 214, -330, 180, -316, 140, -310, 100, -310, 58, -314, 26, -324, -10, -338, -38, -354, -64, -368, -84, -370, -86, -400, -36, -418, 28, -424, 102, -414, 156, -398, 204 )

[node name="Strong2" type="CollisionPolygon2D" parent="Organ/LeftCollision" index="1"]
position = Vector2( 402, 0 )
polygon = PoolVector2Array( -368, 240, -348, 214, -330, 180, -316, 140, -310, 100, -310, 58, -314, 26, -324, -10, -338, -38, -354, -64, -368, -84, -370, -86, -394, -16, -402, 60, -402, 130, -386, 204 )

[node name="Weak1" type="CollisionPolygon2D" parent="Organ/LeftCollision" index="2"]
polygon = PoolVector2Array( -372, -84, -394, -36, -410, 10, -420, 62, -418, 132, -404, 178, -378, 234, -374, 240 )

[node name="Weak2" type="CollisionPolygon2D" parent="Organ/LeftCollision" index="3"]
position = Vector2( 402, 0 )
polygon = PoolVector2Array( -372, -84, -384, -32, -396, 14, -402, 68, -398, 134, -392, 176, -374, 240 )

[node name="RightCollision" type="StaticBody2D" parent="Organ" index="5"]

[node name="Strong1" type="CollisionPolygon2D" parent="Organ/RightCollision" index="0"]
polygon = PoolVector2Array( -38, -80, -48, -68, -66, -44, -80, -20, -92, 14, -98, 46, -98, 80, -96, 116, -92, 140, -86, 160, -76, 184, -64, 204, -52, 222, -32, 246, -18, 194, -6, 132, -2, 78, -10, 18, -24, -50 )
disabled = true

[node name="Strong2" type="CollisionPolygon2D" parent="Organ/RightCollision" index="1"]
position = Vector2( 404, 0 )
polygon = PoolVector2Array( -38, -80, -48, -68, -66, -44, -80, -20, -92, 14, -98, 46, -98, 80, -96, 116, -92, 140, -86, 160, -76, 184, -64, 204, -52, 222, -36, 246, -14, 216, 14, 148, 20, 74, 2, -16 )
disabled = true

[node name="Weak1" type="CollisionPolygon2D" parent="Organ/RightCollision" index="2"]
polygon = PoolVector2Array( -36, -76, -20, -34, -10, 6, -4, 52, -4, 102, -10, 146, -18, 186, -34, 240, -36, 238 )

[node name="Weak2" type="CollisionPolygon2D" parent="Organ/RightCollision" index="3"]
position = Vector2( 414, 0 )
polygon = PoolVector2Array( -42, -74, -18, -30, -2, 6, 8, 52, 8, 112, 0, 156, -14, 190, -36, 234, -42, 240 )

[node name="Emmitters" type="Node2D" parent="Organ" index="6"]
script = ExtResource( 11 )

[node name="BL" type="Particles2D" parent="Organ/Emmitters" index="0"]
position = Vector2( -202, 258 )
emitting = false
amount = 50
lifetime = 2.5
one_shot = true
local_coords = false
process_material = SubResource( 4 )

[node name="TL" type="Particles2D" parent="Organ/Emmitters" index="1"]
position = Vector2( -202, -119 )
emitting = false
amount = 50
lifetime = 2.5
one_shot = true
process_material = SubResource( 5 )

[node name="BR" type="Particles2D" parent="Organ/Emmitters" index="2"]
position = Vector2( 202, 334 )
emitting = false
amount = 50
lifetime = 2.5
one_shot = true
local_coords = false
process_material = SubResource( 4 )

[node name="TR" type="Particles2D" parent="Organ/Emmitters" index="3"]
position = Vector2( 202, -168 )
emitting = false
amount = 50
lifetime = 2.5
one_shot = true
process_material = SubResource( 5 )

[node name="Signs" type="Node2D" parent="Organ" index="7"]
script = ExtResource( 12 )
down = ExtResource( 14 )
up = ExtResource( 13 )

[node name="0" type="Sprite" parent="Organ/Signs" index="0"]
material = SubResource( 7 )
position = Vector2( -202, 49 )
texture = ExtResource( 13 )

[node name="1" type="Sprite" parent="Organ/Signs" index="1"]
material = SubResource( 8 )
position = Vector2( 202, 49 )
texture = ExtResource( 13 )

[node name="Player" parent="." index="3"]
position = Vector2( -102, 85 )

[node name="BreathTimer" type="Timer" parent="." index="7"]
wait_time = 4.0
autostart = true

[connection signal="animation_finished" from="Organ/Contour" to="." method="_on_Contour_animation_finished"]
[connection signal="timeout" from="BreathTimer" to="." method="_on_BreathTimer_timeout"]

[editable path="ProjectileManagers"]
